--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Style.css">
 </head>
+
 <body>
     <a href="learn.html">Things i have learnt</a>
     <main>
-        <section>
-            <img src="img.jpg" alt="">
+        <section class="section-one">
+            <img src="img.jpg" alt="image of a perfume">
         </section>
-        <section>
+        <section class="section-two">
             <p>Perfume</p>
             <h1>Gabrielle Eau De parfum</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A asperiores, excepturi, earum sed debitis corporis libero aspernatur dolores, architecto facilis numquam. Praesentium architecto ex fuga corrupti commodi alias culpa repellat.</p>
-       <p>$149.99</p>
-       <p>$169.99</p>
-       <p><span>$149.99</span><span>$169.99</span></p>
-       <button>Add to cart</button>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A asperiores, excepturi, earum sed debitis
+                corporis libero aspernatur dolores, architecto facilis numquam. Praesentium architecto ex fuga corrupti
+                commodi alias culpa repellat.</p>
+            <p><span>$149.99</span> <s>$169.99</s></p>
+            <button>Add to cart</button>
         </section>
     </main>
 </body>
+
 </html>
