--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
             <img src="img.jpg" alt="image of a perfume">
         </section>
         <section class="section-two">
-            <p>Perfume</p>
+            <p>P E R F U M E</p>
             <h1>Gabrielle Eau De parfum</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A asperiores, excepturi, earum sed debitis
+            <p class="solar">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. A asperiores, excepturi, earum sed debitis
                 corporis libero aspernatur dolores, architecto facilis numquam. Praesentium architecto ex fuga corrupti
                 commodi alias culpa repellat.</p>
-            <p><span>$149.99</span> <s>$169.99</s></p>
-            <button>Add to cart</button>
+           <div class="pricing">
+            <p class="first-price">$149.99</p>
+            <p><strike>$169.99</strike></p>
+            </div>
+            
+             <div class="button-wrapper">
+                <img src="./images/cart.svg" alt="">
+                <button>Add to cart</button>
+             </div>
+              
         </section>
     </main>
 </body>
